# guesslang-http

./: Dockerfile  README.md  entrypoint.sh  pyproject.toml
guesslang_http/: __init__.py  wsgi.py
tests/: test_guesslang_http.py
