[tool.poetry]
name = "guesslang-http"
version = "0.1.0"
description = ""
authors = ["sigma-andex <sigma.andex@pm.me>"]

[tool.poetry.dependencies]
python = "^3.9.7"
guesslang = "^2.2.1"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
